feat: port AE All Pattern to Forge 1.20.1